@@ -6,5 +6,5 @@ import java.util.List;
 public class ElasticsearchInclusions {
     private static final String type = "type";
     private static final String properties = "properties";
-    public static final List<String> KEEP_LIST = Arrays.asList(type, properties);
+    public static final List<String> KEEP_LIST = List.of(type, properties);
 }
